[package]
name = "alignment-exporter"
version = "0.1.0"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
categories = ["data-structures", "graphics"]
description = "Proc macro providing alignment info for a user-defined struct."
edition = "2021"
keywords = ["struct", "alignment", "layout", "padding", "packing"]
license = "MIT"
repository = "https://github.com/tropicbliss/alignment_exporter"
rust-version = "1.80"

[dependencies]
alignment-exporter-derive = "0.1.0"
