[package]
name = "alignment-exporter-derive"
version = "0.1.0"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
categories = []
description = "Proc macro providing alignment info for a user-defined struct."
edition = "2021"
keywords = ["struct", "alignment", "layout", "padding", "packing"]
license = "MIT"
repository = "https://github.com/tropicbliss/alignment_exporter"
rust-version = "1.80"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true